syntax = "proto3";

package attestation_agent;

message GetEvidenceRequest {
    bytes RuntimeData = 1;
}

message GetEvidenceResponse {
    bytes Evidence = 1;
}

message GetTokenRequest {
    string TokenType = 1;
}

message GetTokenResponse {
    bytes Token = 1;
}

message GetDerivedKeyRequest {
    bytes KeyId = 1;
}

message GetDerivedKeyResponse {
    bytes DerivedKey = 1;
}

service AttestationAgentService {
  rpc GetDerivedKey(GetDerivedKeyRequest) returns (GetDerivedKeyResponse) {};
  rpc GetEvidence(GetEvidenceRequest) returns (GetEvidenceResponse) {};
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {};
}
